--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             const TARGET_URL_CLEAN = "https://omjw2.bemobtrcks.com/go/aa1580be-1693-445d-800d-1986cbd284c4?bid=[bid]&clickid=[clickid]&campaignid=1092434&campaignname=avg-cpi-camping-filter&siteid=520804&category=software&connection=[connection]&os=[operatingsystem]&device=[device]&browser=[browser]&country=[cc]";
             const TARGET_URL_PROXY = "https://google.com"; 
             
-            // !! --- التصحيح الحقيقي هنا --- !!
-            const API_KEY = "9a3qj1-ia8bq4-62sjl1-836307"; // (بحرف q - من الصورة تبعك)
+            // !! --- المفتاح الصحيح (من الصورة) --- !!
+            const API_KEY = "9a30j1-ia8bq4-62sjl1-836307"; // (بحرف q)
             
             const REDIRECT_DELAY = 5000; 
 
